# soar-lite

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.yml
docs/: conf.py  configuration.rst  design_decisions.rst  index.rst
playbooks/: example_playbook.yml
soar_cli/: __main__.py  config.py  logging.py  settings.py
tests/: test_settings.py
